# skymarket

./: docker-compose.yaml  requirements.txt
skymarket/: pyproject.toml  requirements.txt
skymarket/ad/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ad/migrations/: 0001_initial.py  0002_initial.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/fixtures/: users.json
skymarket/skymarket/: settings.py  urls.py
skymarket/user/: managers.py  models.py  serializers.py
skymarket/user/migrations/: 0001_initial.py
skymarket/users/migrations/: 0001_initial.py
